@@ -1,3 +1,11 @@
+2003-01-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgda/gda-client.c (gda_client_open_connection): made all GModule's
+	we load resident, to avoid registration problems with types defined in
+	them.
+	(provider_weak_cb): added weak reference callback for controlling the
+	lifetime of all the providers we load.
+
 2003-01-06  Holger Thon <holger.thon@gnome-db.org>
 
 	* configure.in: freetds include fix for redhat
